# etf-monitoring-agent

./: .gitignore  README.md  pyproject.toml
api/: main.py
src/agent/: graph.py  state.py
src/agent/nodes/: changes.py  comparables.py  dominance.py  fetch.py  history.py  risks.py  synthesize.py
src/api/: main.py
src/etf_monitoring_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/etf_monitoring_agent/agent/: graph.py  state.py
src/etf_monitoring_agent/agent/nodes/: changes.py  comparables.py  dominance.py  fetch.py  history.py  risks.py  synthesize.py
src/etf_monitoring_agent/schemas/: output.py
src/etf_monitoring_agent/tools/: comparables.py  etf_data.py
src/schemas/: input.py  internal.py  output.py
src/tools/: comparables.py  etf_data.py
tests/: test_api.py  test_dominance.py  test_graph.py
